<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView4"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txt1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txt2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txt3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txt4" />

</LinearLayout>
